fix: HTML dosyalarındaki yorum hataları temizlendi ve footer yapıları standartlaştırıldı

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <li><a href="pages/kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="pages/canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="pages/kripto-piyasa.html">Kripto Piyasa</a></li>
-                        <li><a href="pages/blog.html">Blog</a></li> {/* Blog bağlantısı eklendi */}
+                        <li><a href="pages/blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2">
