--- a/pages/doviz-cevirici.html
+++ b/pages/doviz-cevirici.html
@@ -139,7 +139,7 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
@@ -149,8 +149,8 @@
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                    <h5>Diğer</h5>
+                <div class="col-md-2">
+                    <h5>İletişim</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
                         <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
