--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -12,13 +12,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru hakkında bilgi edinin. Anlık döviz kurları, kripto para fiyatları ve finansal araçlar sunan platformumuzun misyonu ve hizmetleri."> {/* Description güncellendi */}
-    <meta name="keywords" content="canlı döviz kuru, hakkımızda, finans platformu, döviz bilgileri, kripto bilgileri"> {/* Keywords güncellendi */}
+    <meta name="description" content="Canlı Döviz Kuru hakkında bilgi edinin. Anlık döviz kurları, kripto para fiyatları ve finansal araçlar sunan platformumuzun misyonu ve hizmetleri.">
+    <meta name="keywords" content="canlı döviz kuru, hakkımızda, finans platformu, döviz bilgileri, kripto bilgileri">
     <meta name="google-adsense-account" content="ca-pub-8020765633962496">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Hakkımızda - Canlı Döviz Kuru | Anlık Döviz ve Kripto Para Bilgileri</title>
-    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon düzeltildi */}
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -51,10 +51,10 @@
                         <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a> {/* Active sınıfı eklendi */}
+                        <a class="nav-link active" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
                     </li>
                 </ul>
             </div>
@@ -65,9 +65,9 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <div class="card shadow-sm"> {/* Gölge eklendi */}
-                    <div class="card-header bg-primary text-white"> {/* Renk değiştirildi */}
-                        <h1 class="h3 mb-0"><i class="bi bi-info-circle-fill"></i> Canlı Döviz Kuru Hakkında</h1> {/* İkon eklendi */}
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h1 class="h3 mb-0"><i class="bi bi-info-circle-fill"></i> Canlı Döviz Kuru Hakkında</h1>
                     </div>
                     <div class="card-body">
                         <h2 class="h4 mb-4">Misyonumuz: Anlık ve Güvenilir Finans Bilgisi</h2>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <div class="alert alert-light mt-4 border"> {/* Stil değiştirildi */}
+                        <div class="alert alert-light mt-4 border">
                             <h4 class="h6 mb-3"><i class="bi bi-bullseye me-2"></i>Vizyonumuz</h4>
                             <p class="mb-0">
                                 Canlı Döviz Kuru olarak vizyonumuz, Türkiye'deki herkes için finansal bilgilere erişimi kolaylaştırmak ve finansal okuryazarlığı desteklemektir. Güncel dolar kuru, euro kuru gibi temel bilgilerin yanı sıra, daha karmaşık finansal araçlar ve piyasalar hakkında da anlaşılır içerikler sunarak kullanıcılarımızın bilinçli kararlar almasına yardımcı olmayı hedefliyoruz.
@@ -154,10 +154,10 @@
                 <div class="col-md-6">
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
-                    {/* İletişim bilgisi buraya eklenebilir */}
-                    {/* <p><i class="bi bi-envelope"></i> info@candovizkuru.com</p> */}
+                    <!-- İletişim bilgisi buraya eklenebilir -->
+                    <!-- <p><i class="bi bi-envelope"></i> info@candovizkuru.com</p> -->
                 </div>
-                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                <div class="col-md-3">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
@@ -167,7 +167,7 @@
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                <div class="col-md-3">
                     <h5>Diğer</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
@@ -188,7 +188,6 @@
     </button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {/* Chart.js kaldırıldı */}
     <script src="../script.js"></script>
 </body>
 </html>
