--- a/pages/canli-doviz.html
+++ b/pages/canli-doviz.html
@@ -18,7 +18,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8020765633962496"
      crossorigin="anonymous"></script>
     <title>Canlı Döviz Kurları - Canlı Döviz Kuru | Anlık Döviz Bilgileri</title>
-    <link rel="icon" type="image/png" href="../favicon.png"> {/* Favicon düzeltildi */}
+    <link rel="icon" type="image/png" href="../favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style.css">
@@ -34,7 +34,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto"> {/* ms-auto eklendi */}
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html"><i class="bi bi-house-door"></i> Ana Sayfa</a>
                     </li>
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
@@ -65,12 +65,12 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-8">
-                <div class="card mb-4">
+                <div class="card mb-4 shadow-sm">
                     <div class="card-body">
                         <h1 class="card-title">Canlı Döviz Kurları</h1>
                         <p class="lead">Türkiye'deki güncel döviz kurlarını anlık olarak takip edin. Dolar, Euro ve diğer para birimlerinin TL karşılıklarını görüntüleyin.</p>
                         <div class="table-responsive">
-                            <table class="table table-hover">
+                            <table class="table table-hover table-striped">
                                 <thead>
                                     <tr>
                                         <th>Para Birimi</th>
@@ -81,16 +81,17 @@
                                 </thead>
                                 <tbody id="dovizKurlariTable">
                                     <!-- Döviz kurları buraya gelecek -->
+                                     <tr><td colspan="4" class="text-center p-5"><div class="spinner-border text-primary" role="status"><span class="visually-hidden">Yükleniyor...</span></div></td></tr>
                                 </tbody>
                             </table>
                         </div>
-                        <small id="lastUpdate" class="text-muted">Son Güncelleme: ...</small> {/* lastUpdate eklendi */}
+                        <small id="lastUpdate" class="text-muted">Son Güncelleme: ...</small>
                     </div>
                 </div>
 
-                <div class="card mb-4">
+                <div class="card mb-4 shadow-sm">
                     <div class="card-body">
-                        <h2 class="card-title">Döviz Piyasası Hakkında</h2>
+                        <h2 class="card-title h4">Döviz Piyasası Hakkında</h2>
                         <p class="card-text">Döviz piyasası, farklı ülkelerin para birimlerinin alınıp satıldığı global bir piyasadır. Bu piyasada işlem gören başlıca para birimleri:</p>
                         <ul>
                             <li>ABD Doları (USD)</li>
@@ -104,25 +105,25 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card mb-4">
+                <div class="card mb-4 shadow-sm">
                     <div class="card-body">
-                        <h3 class="card-title">Döviz Çevirici</h3>
+                        <h3 class="card-title h5">Döviz Çevirici</h3>
                         <p class="card-text">Hızlı ve kolay döviz çevirimi yapın. Tüm para birimleri arasında anlık dönüşüm yapabilirsiniz.</p>
-                        <div class="d-grid"> {/* Buton için d-grid kullanıldı */}
+                        <div class="d-grid">
                              <a href="doviz-cevirici.html" class="btn btn-primary">Döviz Çeviriciye Git</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card shadow-sm">
                     <div class="card-body">
-                        <h3 class="card-title">Döviz Piyasası İpuçları</h3>
+                        <h3 class="card-title h5">Döviz Piyasası İpuçları</h3>
                         <ul class="list-unstyled">
-                            <li class="mb-2">✓ Piyasayı düzenli takip edin</li>
-                            <li class="mb-2">✓ Ekonomik göstergeleri inceleyin</li>
-                            <li class="mb-2">✓ Risk yönetimi yapın</li>
-                            <li class="mb-2">✓ Güvenilir kaynakları takip edin</li>
-                            <li class="mb-2">✓ Uzun vadeli planlar yapın</li>
+                            <li class="mb-2"><i class="bi bi-check text-success"></i> Piyasayı düzenli takip edin</li>
+                            <li class="mb-2"><i class="bi bi-check text-success"></i> Ekonomik göstergeleri inceleyin</li>
+                            <li class="mb-2"><i class="bi bi-check text-success"></i> Risk yönetimi yapın</li>
+                            <li class="mb-2"><i class="bi bi-check text-success"></i> Güvenilir kaynakları takip edin</li>
+                            <li class="mb-2"><i class="bi bi-check text-success"></i> Uzun vadeli planlar yapın</li>
                         </ul>
                     </div>
                 </div>
@@ -138,21 +139,21 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-3"> {/* Sütun genişliği ayarlandı */}
+                <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
-                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3"> {/* Sütun genişliği ayarlandı */}
-                    <h5>Diğer</h5> {/* Başlık Diğer olarak değiştirildi */}
+                <div class="col-md-2">
+                    <h5>İletişim</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li> {/* Gizlilik Politikası eklendi */}
+                        <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
                     </ul>
                 </div>
             </div>
@@ -169,9 +170,21 @@
     </button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    {/* Chart.js kaldırıldı, bu sayfada kullanılmıyor gibi */}
     <script src="../script.js"></script>
-    {/* Bu sayfaya özel scriptler gerekirse buraya eklenebilir */}
+    <script>
+        // Sayfa yüklendiğinde canlı döviz kurlarını yükle
+        document.addEventListener('DOMContentLoaded', () => {
+            if (typeof loadLiveRates === 'function') {
+                loadLiveRates(); // script.js içindeki fonksiyonu çağır
+            }
+             // Belirli aralıklarla veriyi yenilemek için (örneğin 1 dakikada bir)
+             // setInterval(() => {
+             //     if (typeof loadLiveRates === 'function') {
+             //         loadLiveRates();
+             //     }
+             // }, 60000); // 60000 milisaniye = 1 dakika
+        });
+    </script>
 
 </body>
 </html>
