--- a/pages/gizlilik-politikasi.html
+++ b/pages/gizlilik-politikasi.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Canlı Döviz Kuru sitesinin gizlilik politikası ve kullanım koşulları. Veri toplama, çerez kullanımı ve sorumluluk reddi hakkında bilgiler."> {/* Description güncellendi */}
+    <meta name="description" content="Canlı Döviz Kuru sitesinin gizlilik politikası ve kullanım koşulları. Veri toplama, çerez kullanımı ve sorumluluk reddi hakkında bilgiler.">
     <meta name="robots" content="index, follow">
     <title>Gizlilik Politikası - Canlı Döviz Kuru</title>
     <link rel="icon" type="image/png" href="../favicon.png">
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="kripto-piyasa.html"><i class="bi bi-coin"></i> Kripto Piyasa</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a> {/* Blog eklendi */}
+                        <a class="nav-link" href="blog.html"><i class="bi bi-pencil-square"></i> Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hakkimizda.html"><i class="bi bi-info-circle"></i> Hakkımızda</a>
@@ -62,9 +62,9 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <div class="card shadow-sm"> {/* Gölge eklendi */}
+                <div class="card shadow-sm">
                     <div class="card-body">
-                        <h1 class="card-title h3 mb-4"><i class="bi bi-shield-lock"></i> Gizlilik Politikası ve Kullanım Koşulları</h1> {/* İkon eklendi */}
+                        <h1 class="card-title h3 mb-4"><i class="bi bi-shield-lock"></i> Gizlilik Politikası ve Kullanım Koşulları</h1>
 
                         <h2 class="h4 mt-4">1. Veri Toplama ve Kullanım</h2>
                         <p>Canlı Döviz Kuru olarak, hizmetlerimizi iyileştirmek ve kullanıcı deneyimini geliştirmek amacıyla bazı temel verileri toplamaktayız:</p>
@@ -110,11 +110,11 @@
                             <li>Sitede yer alan hiçbir içerik, belirli bir finansal ürün veya hizmet için tavsiye niteliği taşımaz.</li>
                         </ul>
 
-                        <div class="alert alert-warning mt-4"> {/* Renk değiştirildi */}
+                        <div class="alert alert-warning mt-4">
                             <p class="mb-0"><i class="bi bi-exclamation-triangle-fill"></i> Bu gizlilik politikası ve kullanım koşulları, önceden haber verilmeksizin güncellenebilir. Yapılan değişiklikler bu sayfada yayınlandığı andan itibaren geçerli olacaktır. Siteyi kullanmaya devam etmeniz, güncellenmiş koşulları kabul ettiğiniz anlamına gelir.</p>
                         </div>
 
-                        <p class="text-muted mt-4">Son güncelleme: 6 Nisan 2025</p> {/* Tarih güncellendi */}
+                        <p class="text-muted mt-4">Son güncelleme: 6 Nisan 2025</p>
                     </div>
                 </div>
             </div>
@@ -129,18 +129,18 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-3"> {/* Genişlik ayarlandı */}
+                <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
                         <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
                         <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
                         <li><a href="canli-doviz.html">Canlı Döviz</a></li>
                         <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
-                        <li><a href="blog.html">Blog</a></li> {/* Blog eklendi */}
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3"> {/* Genişlik ayarlandı */}
-                    <h5>Diğer</h5>
+                <div class="col-md-2">
+                    <h5>İletişim</h5>
                     <ul class="list-unstyled">
                         <li><a href="hakkimizda.html">Hakkımızda</a></li>
                         <li><a href="gizlilik-politikasi.html">Gizlilik Politikası</a></li>
